wordpress/wp-content/themes/ripple/assets/less/wordpress.less
/* ... */
article.post .entry-content h1 {
    line-height: 42px;
} 
article.post .entry-content h2 {
    line-height: 41px;
}
article.post .entry-content h3 {
    line-height: 26px;
} 
article.post .entry-content h4 {
    line-height: 26px;
}

article.post .entry-content h5 {
    font-family: 'open_sansbold';
    line-height: 26px;
}
article.post .entry-content > ul, article.post .entry-content > ol {
    margin-left: 40px;
}
.entry-content li {
    list-style: disc outside none;
    margin-bottom: 10px;
}
.entry-content ol li {
    list-style: decimal outside none;
}
article.post .entry-content > p {
    margin-bottom: 15px;
}
article.post footer a {
    color: #3372AD;
    text-decoration: none;
}
.post-area-heading {
    width: 90%;
    padding: 30px;
}
.post footer.entry-meta {
    font-weight: 400;
    line-height: 1.6875;
    margin-bottom: 3px;
    position: relative;
}
a.readmore {
    color: #4274ae;
    text-decoration: none;
}
a.readmore:after {
    content: ">";
    padding-left: 2px;
    position: absolute;
    top: 1px;
}
// Button Styleså
.dev-ripple .comment-form #submit, .dev-ripple .form-submit > input, .search-submit, 
.comment-form #submit, .form-submit > input, .search-submit {
    background: none repeat scroll 0 0 #B7B7B7;
    border: medium none;
    border-radius: 4px;
    color: #FFFFFF !important;
    display: inline-block;
    font-family: "Helvetica Neue",Arial,Helvetica,sans-serif;
    font-size: 13px;
    font-weight: 700;
    letter-spacing: 0.05em;
    line-height: 1.6875;
    max-width: 100%;
    padding: 0.57143em 1.42857em;
    position: relative;
    text-align: center;
    text-decoration: none;
    transition: all 0.2s ease 0s;
}
.dev-ripple .entry-content > ul {
    margin-left: 80px;
}
// Blog Header Styles
.blog .logo {
    float: left;
    margin: 17px auto;
    width: auto;
}
.blog .logo > a {
    float: left;
    width: 160px;
}
.sub-italic {
    font-family: georgia;
    font-size: 16px;
    font-style: italic;
    margin-left: 14px;
}
// Blog Page Styles
.blog .logo .page-title {
 	margin: -5px 0 0 2px;
    text-decoration: none;
}
.blog .logo .page-title a {
    text-decoration: none;
}
.blog article, .news article {
    padding-bottom: 72px;
    padding-top: 73px;
    width: 50%;
}
.blog .post-thumbnail img {
    margin: 0 auto;
}
h2.blog-title {
    font-size: 22px;
    font-weight: bold;
}
.blog-title > a, .entry-header a {
    color: inherit;
    text-decoration: none;
}
.blog-title > a:hover, .blog-title > a:focus, .entry-header a:hover, .entry-header a:focus {
    color: #383838;
    text-decoration: underline;
}
.entry-meta {
    display: table;
    position: relative;
}
.post footer.entry-meta a:hover {
    text-decoration: underline;
}
// News Page Styles
.news .post-thumbnail img {
    margin: 0 auto 60px;
}
// Search Results Page Styles
.blog .page-title {
    margin-bottom: 0;
    margin-top: 40px;
}
// Featured Quotes Styles
.featured-quotes {
    background: #ececec;
    border-bottom: 1px solid #b7b7b7;
    padding: 32px 0 34px;
    margin-bottom: 0;
}
.featured-quotes-columns {
    margin: 0 auto;
    width: 90%;
}
.featured-quotes p {
    color: #6B6C6C;
    font-size: 1.2rem;
    font-style: italic;
    line-height: 15px;
    text-align: center;
}
.featured-quotes .img-wrap {
    background-repeat: no-repeat;
    background-image: url("../img/sprites-featured_v2.png");
    height: 40px;
    margin: 0 auto;
    position: relative;
}
.bloomberg {
    background-position: 0 0;
    width: 120px;
}
.salon {
    background-position: 0 -38px;
    width: 116px;
}
.gigaom {
    background-position: 0 -75px;
    width: 124px;
}
.reuters {
    background-position: 0 -117px;
    width: 124px;
}
.nytimes {
    background-position: -3px -298px;
    width: 144px;
}
.fortune {
    background-position: 0 -226px;
    width: 124px;
}
.bizinsider {
    background-position: 0 -260px;
    width: 144px;
}
.thefed {
    background-position: -20px -154px;
    width: 124px;
    height: 70px !important;
    margin-bottom: 7px !important;
}

// Footer Links
.site-footer {
}
.footer-wrapper {
    margin-top: -20px;
    background: none repeat scroll 0 0 #707070;
}
.footer-links h5 {
    font-weight: bold;
    color: #ffffff;
}
.footer-links li h5 a {
    color: #ffffff;
}
ul.footer-links {
    .clearfix;
    margin: 0 auto 10px;
    padding-top: 20px;
    padding-bottom: 30px;
    width: 100%;
}
.footer-links > li {
    text-align: left;
    float: left;
    width: 14%;
    padding: 0 1%;
    a {
        color: #ffffff;
        text-decoration: none;
    }
}
.footer-links li ul li {
    list-style: none;
}
.footer-links > li:nth-child(1) {
    line-height: 26px;
    width: 58%;
}
.footer-links > li a:hover {
    text-decoration: underline;
}
// Todo add transition
// .footer-links li ul li:hover:before {
//     color: #FFFFFF;
//     content: ">";
//     margin-right: 6px;
// }
.site-info > p {
    color: #CFCFCF;
    text-align: center;
}
#menu-footer-links-column-one li {
    margin-bottom: 10px;
}
// Sub Footer
.sub-footer {
    background: none repeat scroll 0 0 #3F4040;
    color: #868686;
    border-top: 1px solid #868686;
    border-bottom: 1px solid #868686;
    padding: 29px 0 9px;
    text-decoration: none;
}
.sub-footer a, .sub-footer a {
    text-decoration: none;
}
.sub-footer a:hover, .sub-footer a:focus {
    color: #FFFFFF;
    text-decoration: underline;
}
.sub-footer ul {
    margin: 4px 0 0 53px;
    color: #ffffff;
}
.sub-footer li.icon-circle {
    font-size: 6px;
    position: relative;
    top: -2px;
}
.sub-footer ul li a:hover, .sub-footer ul li a:focus {
    color: #919191;
}
// Guide Page Styles
// Guide Content Area
body .guide {
    font-family: 'open_sansregular', Helvetica, Arial, sans-serif;
}
.guide .content-area {
    padding-top: 48px;
}
// Sticky Guide Nav
// Guide-nav Affix
.guide-nav.affix-top {
    // background: @pink;
    width: 240px;
}
.guide-nav.affix {
    top: 123px;
    width: 240px;
}
/* ... */

